--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Prajwal D Prakash | Programmer</title>
+
+    <script src="https://kit.fontawesome.com/be8683ad34.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but my-website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>I'm sorry but my website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
